--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+
+	<style>    	
+		@media screen and (max-width: 480px) {
+			.displayBig {
+				display: none;
+			}
+	
+			.displaySmall {
+				display: block !important;
+			}
+		}
+
+		@media screen and (max-width: 836px) {
+			.displayBig2 {
+				display: none;
+			}
+	
+			.displaySmall2 {
+				display: block !important;;
+			}
+		}
+	</style>
+
 	<head>
 		<title>Condos Cité Avenir Laval</title>
 		<meta charset="utf-8" />
@@ -21,13 +44,13 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<!-- <img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png"> -->
-						<!-- <h1><a href="index.html">Condos Cité Avenir Laval</a></h1> -->
+					<header id="header">
+						<img style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="alt">
-									<a href="index.html"><span>Français</span></a>
+								<li>
+									<div class="displayBig"><a href="index.html"><span>Français</span></a></div>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -39,6 +62,7 @@
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
+											<li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -49,41 +73,61 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Condos Cité Avenir Laval</h2>
-							<!-- <p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
-							<img style="height: auto; width: 100px; display: block; margin-left: auto; margin-right: auto;" src="images/logo.png">
+							<!-- <h2>Condos Cité Avenir Laval</h2> -->
+							<img style="height: auto; width: 140px; display: block; margin-left: auto; margin-right: auto;" src="images/logoIcon.png">
+							<img style="height: auto; width: 400px; display: block; margin-left: auto; margin-right: auto;" src="images/logoText.png">
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
+					<!-- <section id="one" class="wrapper style1 special" style="padding: 3em 3em 1em 3em;">
+						<div class="inner">
+							<header class="major" style="margin-bottom: 30px;">
+								<h3 style="text-transform: none; font-weight: 600; border-color: rgba(255, 255, 255, 0);">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
+								<h4 style="text-transform: none; font-weight: 500; border-color: rgba(255, 255, 255, 1);">One, two, or three  bedroom units are available.</h4>
+								<a href="en-contact.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">Contact</a>
+							</header>
+						</div>
+					</section> -->
+
+				<!-- Two -->
+				<div class="displayBig2">
+					<section id="two" class="wrapper alt style2">
+
+						<section class="spotlight" style="background-color: #4591c5">
+							<div class="image">
+								<img class="imageDisappear" src="images/banner.jpg" alt="" />
+							</div>
+							<div class="content">
+								<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h4>
+							</div>
+						</section>
+
+						<section class="spotlight" style="background-color: #87c45d;">
+							<div class="image">
+								<img src="images/banner.jpg" alt="" />
+							</div>
+							<div class="content">
+								<h4>just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
+								<a href="en-contact.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Contact</a>
+							</div>
+						</section>
+						
+					</section>
+				<div>
+
+				<div class="displaySmall2" style="display: none;">
 					<section id="one" class="wrapper style1 special" style="padding: 3em 3em 1em 3em;">
 						<div class="inner">
 							<header class="major" style="margin-bottom: 30px;">
-								<h3 style="text-transform: none; font-weight: 400; border-color: rgba(255, 255, 255, 1);">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
-								<h4 style="text-transform: none; font-weight: 400; border-color: rgba(255, 255, 255, 1);">One, two, or three  bedroom units are available.</h4>
+								<h3 style="text-transform: none; font-weight: 600; border-color: rgba(255, 255, 255, 0);">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
+								<h4 style="text-transform: none; font-weight: 500; border-color: rgba(255, 255, 255, 1);">One, two, or three  bedroom units are available.</h4>
 								<a href="en-contact.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">Contact</a>
 							</header>
 						</div>
 					</section>
-
-				<!-- Two -->
-					<!-- <section id="two" class="wrapper alt style2">
-						<section class="spotlight">	
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h2>
-							</div>
-						</section>
-					</section> -->
+				<div>
 
 				<!-- Three -->
 					<!-- <section id="three" class="wrapper style3 special">
@@ -114,9 +158,8 @@
 						</div>
 					</section> -->
 
-				<!-- CTA -->
-					<section>
-						<!-- <div class="inner">
+					<!-- <section>
+						<div class="inner">
 							<header>
 								<h2>Arcue ut vel commodo</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
@@ -125,11 +168,8 @@
 								<li><a href="en-contact.html" class="button fit special">Contact</a></li>
 								<li><a href="en-project.html" class="button fit">Project</a></li>
 							</ul>
-						</div> -->
-
-						<div id="googleMap" style="height:300px"></div>
-
-					</section>
+						</div> 
+					</section> -->
 
 				<!-- Footer -->
 					<footer id="footer" style="padding: 2em 0 0.5em 0;">
@@ -154,32 +194,5 @@
 			<style type="text/css">
 				#map_canvas {display:none;}
 				</style>
-
-			<script>
-
-				function myMap() {
-
-					var mapProp= {
-						zoom: 13,
-						center: new google.maps.LatLng(45.625469, -73.688291),
-						mapTypeId: google.maps.MapTypeId.ROADMAP
-					};
-
-					map = new google.maps.Map(document.getElementById("googleMap"),
-						mapProp);
-
-					var marker = new google.maps.Marker({
-						position: {lat:45.625469, lng:-73.688291},
-						map: map,
-						title: 'Condos Cité Avenir Laval'
-					});
-
-				}
-			</script>
-			
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"
-			async defer></script>
-			
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"></script>
 	</body>
 </html>
