--- a/en-builder.html
+++ b/en-builder.html
@@ -6,17 +6,21 @@
 -->
 <html>
 	<style>
-		@media screen and (max-width: 1680px) {
-			#main > header {
-				padding: 5em 3em 5em 3em !important;
-			}
-		}
-
 		#main > header {
 			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
 			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
 			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
 			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
+		}
+
+		@media screen and (max-width: 480px) {
+			.displayBig {
+				display: none;
+			}
+	
+			.displaySmall {
+				display: block !important;
+			}
 		}
 	</style>
 	<head>
@@ -36,12 +40,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+						<img style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
 						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="alt">
-									<a href="index.html"><span>Français</span></a>
+								<li>
+									<div class="displayBig"><a href="index.html"><span>Français</span></a></div>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -53,7 +57,7 @@
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
-											<!-- <li><a href="elements.html">Elements</a></li> -->
+											<li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -63,20 +67,21 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header>
-							<div class="image"><img src="images/M2logo.png" alt="" /></div><div class="content"></div>
+						<header style="background-attachment: scroll;">
+							<h2>Builder</h2>
 						</header>
-						<section class="wrapper style5">
+						<section class="wrapper style5" style="padding: 2em 0 3em 0;">
 							<div class="inner">
-
-								<p>  The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
-								<p>  M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
-	
-								<hr />
-
-								<center><h3>Visit M2 Construction at:</h3></center>
-								<center><a href="http://www.m2construction.ca/">http://www.m2construction.ca/</a></center>
-
+								<p>The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
+								<p>M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
+								<a href="http://www.m2construction.ca/" style="width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">www.m2construction.ca/</a>
+							</div>
+						</section>
+						<section id="one" class="wrapper style1 special" style="padding: 1em 3em 0.5em 3em; background-color: #2e3842;">
+							<div class="inner">
+								<header>
+									<img src="images/M2logo.png" alt="" style="background-color: #2e3842; padding: 5px" />
+								</header>
 							</div>
 						</section>
 					</article>
