--- a/en-features.html
+++ b/en-features.html
@@ -12,6 +12,16 @@
 			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2cropped.jpg") !important;
 			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2cropped.jpg") !important;
 		}
+
+		@media screen and (max-width: 480px) {
+			.displayBig {
+				display: none;
+			}
+	
+			.displaySmall {
+				display: block !important;
+			}
+		}
 	</style>
 	<head>
 		<title>Condos Cité Avenir Laval</title>
@@ -30,12 +40,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+						<img style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
 						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="alt">
-									<a href="index.html"><span>Français</span></a>
+								<li>
+									<div class="displayBig"><a href="index.html"><span>Français</span></a></div>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -47,7 +57,7 @@
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
-											<!-- <li><a href="elements.html">Elements</a></li> -->
+											<li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -65,7 +75,6 @@
 
 								<div class="table-wrapper">
 									<center>
-									<h3>Project features:</h3>
 									<table style="max-width: 600px;">
 										<tbody>
 											<tr>
