--- a/en-level1.html
+++ b/en-level1.html
@@ -5,6 +5,17 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<style>
+		@media screen and (max-width: 480px) {
+			.displayBig {
+				display: none;
+			}
+	
+			.displaySmall {
+				display: block !important;
+			}
+		}
+	</style>
 	<head>
 		<title>Condos Cité Avenir Laval</title>
 		<meta charset="utf-8" />
@@ -22,12 +33,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+						<img style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 6px;" src="images/logo-small.png">
 						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="alt">
-									<a href="index.html"><span>Français</span></a>
+								<li>
+									<div class="displayBig"><a href="index.html"><span>Français</span></a></div>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -39,7 +50,7 @@
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
-											<!-- <li><a href="elements.html">Elements</a></li> -->
+											<li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -49,22 +60,11 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header>
-							<h2>Floor 1</h2>
+						<header style="background-attachment: scroll;">
+							<h2>Project</h2>
 						</header>
 						<section class="wrapper style5">
-							<div class="inner">
-
-								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/plansRoof.jpg">
-
-								<hr />
-
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-
-							</div>
+							<img class="map" style="display: block; margin-left: auto; margin-right: auto; width: 75%; height: auto;" src="images/plansRoof.jpg">
 						</section>
 					</article>
 
