--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -115,9 +115,7 @@
 								<p></p>
 							</div>
 
-							<center>
-								<img class="map" style="display: block; width: 80%; height: auto;" src="images/planDeQuartier.png">
-							</center>
+							<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="images/planDeQuartier.png">
 
 						</section>
 
