test commit at work

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 				
 				
-				<!-- Body when screen is less then -->
+				<!-- Body when screen is small -->
 				<div class="displaySmall2" style="display: none;">
 					<section style="background-color: #4591c5">
 						<div style="padding: 20px 10px 20px 10px">
