--- a/en-features.html
+++ b/en-features.html
@@ -131,7 +131,7 @@
 								<p></p>
 								<p></p>
 								<center><h4 style="margin-top: 50px">Download complete list of features</h4></center>
-								<center><a href="other/SPECIFICATIONS.docx" download style="margin-bottom: 50px" class="button special icon fa-download">Project Specifications</a><center>
+								<center><a href="other/SPECIFICATIONS.docx" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Project Specifications</a><center>
 							</div>
 						</section>
 					</article>
