--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -109,15 +109,22 @@
 										</tbody>
 									</table>
 								</div>
+
+								<a href="images/planDeQuartier.png">
+									<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/planDeQuartier.png">
+								</a>
+
+								<hr>
 								<p></p>
 								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
-								<center><a href="http://ligne360.com">www.ligne360.com</a></center>
-								<p></p>
+								<a href="http://ligne360.com" style="width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">www.ligne360.com</a>
+
 							</div>
-
-							<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="images/planDeQuartier.png">
-
 						</section>
+
+						<a href="images/ligne360.jpg">
+							<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; height: auto;" src="images/ligne360.jpg">
+						</a>
 
 					</article>
 
