--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
 								<img class="imageDisappear" src="images/banner.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h4>
+								<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
 							</div>
 						</section>
 
 						<section class="spotlight" style="background-color: #87c45d;">
 							<div class="image">
-								<img src="images/banner.jpg" alt="" />
+								<img src="images/banner2.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4>just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
-								<a href="en-contact.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Contact</a>
+								<h4>Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
+								<a href="en-project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
 							</div>
 						</section>
 					<div>
@@ -133,7 +133,7 @@
 				<div class="displaySmall2" style="display: none;">
 					<section style="background-color: #4591c5">
 						<div style="padding: 20px 10px 20px 10px">
-							<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h4>
+							<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
 						</div>
 					</section>
 
@@ -142,8 +142,8 @@
 							<img class="imageSmall" style="width: 836px; height: auto;" src="images/banner2.jpg" alt="" />
 						</div>
 						<div style="padding: 20px 10px 20px 10px">
-							<h4>just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
-							<a href="en-contact.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Contact</a>
+							<h4>Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
+							<a href="en-project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
 						</div>
 					</section>
 				<div>
