--- a/en-floor1.html
+++ b/en-floor1.html
@@ -30,7 +30,7 @@
         }).click(function(e) { e.preventDefault(); });
     });</script>
 </head>
-<body>
+<body style="overflow-x: hidden;">
 
 <div id="page-wrapper">
 
@@ -64,17 +64,17 @@
         <header style="background-attachment: scroll;">
 
         </header>
-        <section class="wrapper style5" style="padding: 0 0 0 0;">
+        <section class="wrapper style5" style="padding: 2em 0 2em 0;">
 
             <div class="displayBig">
                 <center>
-                    <img class="map" style="width: 835px; height: 645px;" src="images/floor1.png" usemap="#image-map">
+                    <img class="map" style="width: 835px; height: 645px;" src="images/level1.png" usemap="#image-map">
 
                     <map name="image-map">
-                        <area target="_blank" alt="Room 101" title="Room 101" href="room101.html" coords="104,266,105,443,327,442,327,362,405,361,404,266" shape="poly">
-                        <area target="_blank" alt="Room 102" title="Room 102" href="room102.html" coords="105,91,105,265,404,266,404,189,365,187,365,93" shape="poly">
-                        <area target="_blank" alt="Room 103" title="Room 103" href="room103.html" coords="442,285,508,286,509,341,708,342,709,92,460,91,458,202,441,204" shape="poly">
-                        <area target="_blank" alt="Room 104" title="Room 104" href="room104.html" coords="442,285,509,285,510,341,707,341,707,516,635,516,634,579,484,540,484,379,462,378,461,365,442,364" shape="poly">
+                        <area target="_self" alt="Unit 101" title="Unit 101" href="unit101.html" coords="104,266,105,443,327,442,327,362,405,361,404,266" shape="poly">
+                        <area target="_self" alt="Unit 102" title="Unit 102" href="unit102.html" coords="105,91,105,265,404,266,404,189,365,187,365,93" shape="poly">
+                        <area target="_self" alt="Unit 103" title="Unit 103" href="unit103.html" coords="442,285,508,286,509,341,708,342,709,92,460,91,458,202,441,204" shape="poly">
+                        <area target="_self" alt="Unit 104" title="Unit 104" href="unit104.html" coords="442,285,509,285,510,341,707,341,707,516,635,516,634,579,484,540,484,379,462,378,461,365,442,364" shape="poly">
                     </map>
                 </center>
             </div>
@@ -85,16 +85,16 @@
                     <table style="max-width: 600px;">
                         <tbody>
                             <tr>
-                                <td style="text-align: center;"><a href="room101.html">Room 101</a></td>
+                                <td style="text-align: center;"><a href="unit101.html">Unit 101</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="room102.html">Room 102</a></td>
+                                <td style="text-align: center;"><a href="unit102.html">Unit 102</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="room103.html">Room 103</a></td>
+                                <td style="text-align: center;"><a href="unit103.html">Unit 103</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="room104.html">Room 104</a></td>
+                                <td style="text-align: center;"><a href="unit104.html">Unit 104</a></td>
                             </tr>
                         </tbody>
                     </table>
