--- a/en-project.html
+++ b/en-project.html
@@ -38,7 +38,7 @@
         }).click(function(e) { e.preventDefault(); });
     });</script>
 </head>
-<body>
+<body style="overflow-x: hidden;">
 
 <div id="page-wrapper">
 
@@ -70,7 +70,8 @@
 
     <article id="main">
         <header style="background-attachment: scroll;">
-
+            <h2>Project</h2>
+            <!-- <h2>Plan D'aménagement Paysager</h2> -->
         </header>
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
 
@@ -79,10 +80,10 @@
                     <img class="map" style="width: 835px; height: 540px;" src="images/banner.jpg" usemap="#image-map">
 
                     <map name="image-map">
-                        <area target="_blank" alt="Floor 3" title="Floor 3" href="en-floor1.html" coords="114,342,251,319,332,322,332,326,415,331,446,328,521,334,537,331,584,336,597,334,707,339,707,279,598,268,583,271,538,265,521,270,446,259,415,265,331,254,331,249,251,241,114,286" shape="poly">
-                        <area target="_blank" alt="Floor 4" title="Floor 4" href="en-floor1.html" coords="114,285,253,241,332,249,332,253,416,266,447,259,522,271,537,265,583,273,598,268,706,280,707,218,597,207,584,211,584,187,619,192,623,179,556,160,547,161,533,159,525,161,526,176,539,172,584,186,584,210,538,200,522,206,446,190,416,199,332,182,332,177,250,167,113,229" shape="poly">
-                        <area target="_blank" alt="Floor 2" title="Floor 2" href="en-floor1.html" coords="114,397,251,398,334,394,415,397,446,395,582,399,598,397,707,396,707,340,596,334,583,336,538,330,521,334,446,328,416,331,332,327,332,324,251,319,113,341" shape="poly">
-                        <area target="_blank" alt="Floor 1" title="Floor 1" href="en-floor1.html" coords="114,435,248,459,416,448,443,453,578,445,597,449,705,446,705,395,597,397,582,398,446,395,416,397,332,393,250,398,114,397" shape="poly">
+                        <area target="_self" alt="Floor 3" title="Floor 3" href="en-floor1.html" coords="114,342,251,319,332,322,332,326,415,331,446,328,521,334,537,331,584,336,597,334,707,339,707,279,598,268,583,271,538,265,521,270,446,259,415,265,331,254,331,249,251,241,114,286" shape="poly">
+                        <area target="_self" alt="Floor 4" title="Floor 4" href="en-floor1.html" coords="114,285,253,241,332,249,332,253,416,266,447,259,522,271,537,265,583,273,598,268,706,280,707,218,597,207,584,211,584,187,619,192,623,179,556,160,547,161,533,159,525,161,526,176,539,172,584,186,584,210,538,200,522,206,446,190,416,199,332,182,332,177,250,167,113,229" shape="poly">
+                        <area target="_self" alt="Floor 2" title="Floor 2" href="en-floor1.html" coords="114,397,251,398,334,394,415,397,446,395,582,399,598,397,707,396,707,340,596,334,583,336,538,330,521,334,446,328,416,331,332,327,332,324,251,319,113,341" shape="poly">
+                        <area target="_self" alt="Floor 1" title="Floor 1" href="en-floor1.html" coords="114,435,248,459,416,448,443,453,578,445,597,449,705,446,705,395,597,397,582,398,446,395,416,397,332,393,250,398,114,397" shape="poly">
                     </map>
                 </center>
             </div>
