--- a/unit101.html
+++ b/unit101.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/logo-small.png">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
@@ -41,9 +42,9 @@
     <article id="main">
         <header style="background-attachment: scroll;"></header>
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
-
-            <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="images/103-1.png">
-
+            <a href="images/101-1.png">
+            <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="images/101-1.png">
+            </a>
         </section>
     </article>
 
