Adding pics pt.1

--- a/en-elements.html
+++ b/en-elements.html
@@ -31,7 +31,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="en-project.html">Project</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
-											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
 											<!-- <li><a href="en-elements.html">Elements</a></li> -->
