--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="en-project.html">Project</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
-											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
 											<li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
@@ -90,7 +90,7 @@
 						<img class="logoSmall" style="height: auto; width: 140px; display: block; margin-left: auto; margin-right: auto;" src="images/logoIcon.png">
 						<img class="logoTextSmall" style="height: auto; width: 400px; display: block; margin-left: auto; margin-right: auto;" src="images/logoText.png">
 					</div>
-					<a href="#one" class="more scrolly">Learn More</a>
+					<a href="#two" class="more scrolly">Learn More</a>
 				</section>
 
 
@@ -102,7 +102,7 @@
 								<img class="imageDisappear" src="images/banner.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
 							</div>
 						</section>
 
@@ -111,11 +111,30 @@
 								<img src="images/banner2.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4>Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
+								<h4 style="font-weight: 600;">Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
 								<a href="en-project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
 							</div>
 						</section>
 					<div>
+
+					<section id="three" class="wrapper style3 special">
+							<div class="inner">
+								<ul class="features">
+									<li style="overflow:hidden; max-height: 250px;">
+										<img src="images/HOME CHILDREN JUMPING.jpg" alt="" />
+									</li>
+									<li style="overflow:hidden; max-height: 250px; ">
+										<img style="" src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" />
+									</li>
+									<!-- <li style="overflow:hidden; max-height: 250px;">
+										<img src="images/bannerContact.jpg" alt="" />
+									</li>
+									<li style="overflow:hidden; max-height: 250px;">
+										<img src="images/plansRoof.jpg" alt="" />
+									</li> -->
+								</ul>
+							</div>
+						</section>
 
 					<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
@@ -131,9 +150,9 @@
 				
 				<!-- Body when screen is small -->
 				<div class="displaySmall2" style="display: none;">
-					<section style="background-color: #4591c5">
-						<div style="padding: 20px 10px 20px 10px">
-							<h4 class="paddingRequire">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+					<section style="background-color: #6fbee6">
+						<div style="padding: 40px 10px 40px 10px">
+							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
 						</div>
 					</section>
 
@@ -141,8 +160,8 @@
 						<div>
 							<img class="imageSmall" style="width: 836px; height: auto;" src="images/banner2.jpg" alt="" />
 						</div>
-						<div style="padding: 20px 10px 20px 10px">
-							<h4>Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
+						<div style="padding: 40px 10px 40px 10px">
+							<h4 style="font-weight: 600;">Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
 							<a href="en-project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
 						</div>
 					</section>
@@ -157,6 +176,8 @@
 					</ul>
 				</footer>
 			</div>
+
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
