--- a/unit104.html
+++ b/unit104.html
@@ -28,7 +28,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="en-project.html">Project</a></li>
                             <li><a href="en-neighborhood.html">Neighborhood</a></li>
-                            <li><a href="en-features.html">Features</a></li>
+                            <li><a href="en-plans.html">Plans</a></li>
                             <li><a href="en-builder.html">Builder</a></li>
                             <li><a href="en-contact.html">Contact</a></li>
                             <li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
